--- a/src/records/taxa/search/styles.scss
+++ b/src/records/taxa/search/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/_variables.scss";
+@import "../../../common/styles/_variables.scss";
 
 #suggestions .table-view {
   border-top: none;
