--- a/src/records/list/styles.scss
+++ b/src/records/list/styles.scss
@@ -1,4 +1,5 @@
 @import "../../common/styles/_variables.scss";
+@import "../../common/styles/swipe-list.scss";
 
 //HEADER
 #records-header {
@@ -39,230 +40,96 @@
 //LIST
 #records-list {
   margin: 0;
+  border-color: $color-blue-light;
 
-  &.table-view {
-    border-color: $color-blue-light;
+  //pull right
+  .online-status {
+    margin-right: 7px;
+
+    &.icon:before {
+      font-size: 15px;
+    }
+
+    &.local {
+      color: $color-orange;
+    }
+
+    &.cloud,
+    &.icon-plus{
+      font-size: 15px;
+      color: $color-blue;
+    }
   }
 
-  .table-view-cell {
-    padding-right: 33px;
-  }
 
-  li {
-    min-height: 65px;
-    border-color: $color-blue-light;
+  //record info
+  .media-body {
+    .gridref, .plot {
+      font-size: $text-font-size - 2;
+      color: $button-black;
 
-    font-size: 13.3333px;
-    font-weight: normal;
-    height: 16px;
-    line-height: 17.3333px;
-
-    //shrink the size nicely
-    &.shrink {
-      min-height: 0;
-      margin: 0;
-      height: 0;
-      padding: 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
-    -webkit-transition:height 200ms ease-in-out;
-    -moz-transition:height 200ms ease-in-out;
-    -o-transition:height 200ms ease-in-out;
-    transition:height 200ms ease-in-out;
+    .gridref {
+      font-weight: bold;
+    }
+    .plot {
+      position: absolute;
+      top: 11px;
+      right: 35px;
+    }
+    .level {
+      text-transform: capitalize;
+      font-size: $text-font-size - 2;
+      color: #333;
+      margin-right: 10px;
+    }
+    .date,
+    .location{
+      float: left;
+      font-size: $text-font-size - 2;
+      color: $button-black;
+      margin-right: 10px;
+      &.error {
+        color: $color-orange;
+      }
 
-    &.empty {
-      height: initial !important;
-      min-height: initial !important;
-      padding: 13px 0;
-      border: none;
-      margin: 0;
-
-      list-style: none;
-      text-align: center;
-
-      color: $color-black;
-
-      a {
-        line-height: $button-height;
-        position: relative;
-        right: 0;
-        margin: 31px auto 0;
+      &.warn {
+        color: $color-yellow;
       }
     }
 
-    .mobile-swipe-edit #delete {
-      padding-top: 20px;
+    .location {
+      width: 60%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
-    .photo {
-      margin: -9px 8px 0 -14px;
-      height: 60px;
-      width: 60px;
-      background-color: #E5EACD;
-
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-      }
+    .attributes {
+      clear: both;
     }
 
-    a {
-      cursor: default;
-
-      //mobile swipe styles
-      transition: transform 0.3s cubic-bezier(0, 0, 0, 1);
-      z-index: 10;
-      background-color: $color-white;
-
-      &:hover {
-        background-color: $color-gray-light;
-
-        .online-status {
-          display: none;
-        }
-
-        .edit {
-          display: inline-block;
-
-          .delete {
-            margin-left: 25px;
-          }
-        }
-      }
-
-      &.mobile:hover {
-        background-color: $color-white;
-
-        .online-status {
-          display: inline-block;
-        }
-
-        .edit {
-          .delete {
-            margin-left: 0;
-          }
-        }
-      }
-
-      //pull right
-      .online-status {
-        margin-right: 7px;
-
-        &.icon:before {
-          font-size: 15px;
-        }
-
-        &.local {
-          color: $color-orange;
-        }
-
-        &.cloud,
-        &.icon-plus{
-          font-size: 15px;
-          color: $color-blue;
-        }
-      }
-
-      //pull right
-      .group-status {
-        position: absolute;
-        top: 30px;
-        right: 40px;
-
-        color: $color-gray-dark;
-
-        &.icon:before {
-          font-size: 15px;
-        }
-      }
-
-      .edit {
-        display: none;
-        padding-top: 13px;
-
-        color: $color-gray-dark;
-
-        .icon{
-          cursor: initial;
-          &:before {
-            font-size: 17px;
-          }
-          &:hover {
-            color: $button-black;
-          }
-        }
-      }
-
-      //record info
-      .media-body {
-        .gridref, .plot {
-          font-size: 15px;
-          color: $button-black;
-
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-        .gridref {
-          font-weight: bold;
-        }
-        .plot {
-          position: absolute;
-          top: 11px;
-          right: 35px;
-        }
-        .level {
-          text-transform: capitalize;
-          font-size: 12px;
-          color: #333;
-          margin-right: 10px;
-        }
-        .date,
-        .location{
-          float: left;
-          font-size: 12px;
-          color: $button-black;
-          margin-right: 10px;
-          &.error {
-            color: $color-orange;
-          }
-
-          &.warn {
-            color: $color-yellow;
-          }
-        }
-
-        .location {
-          width: 60%;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-
-        .attributes {
-          clear: both;
-        }
-
-        div.stage,
-        div.number {
-          @extend .date;
-          margin-right: 10px;
-        }
-
-        div.comment {
-          @extend .date;
-          float: none;
-          overflow: hidden;
-
-          word-wrap: normal;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-
-          font-size: 12px;
-          color: $color-gray-dark;
-        }
-
-      }
+    div.stage,
+    div.number {
+      @extend .date;
+      margin-right: 10px;
     }
+
+    div.comment {
+      @extend .date;
+      float: none;
+      overflow: hidden;
+
+      word-wrap: normal;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+
+      font-size: 12px;
+      color: $color-gray-dark;
+    }
+
   }
 }
