--- a/src/records/list/styles.scss
+++ b/src/records/list/styles.scss
@@ -71,6 +71,10 @@
 
   //record info
   .media-body {
+    .gridref.error {
+      color: $color-red;
+    }
+
     .gridref, .plot {
       font-size: $text-font-size - 2;
       color: $button-black;
