--- a/src/records/show/styles.scss
+++ b/src/records/show/styles.scss
@@ -5,8 +5,8 @@
   padding-left: 1em;
 }
 
-.info li{
-  padding: 11px 16px 11px 15px;
+.info li.table-view-cell {
+  padding-right: 2%;
 }
 
 .descript.comment {
