--- a/src/common/styles/app.scss
+++ b/src/common/styles/app.scss
@@ -599,6 +599,10 @@ button, input, select, textarea {
   color: $color-black;
 }
 
+.table-view-divider.dark {
+  background-color: $color-gray;
+}
+
 //remove top margin on lists
 .content>.table-view:first-child {
   margin-top: 0;
