--- a/src/common/styles/app.scss
+++ b/src/common/styles/app.scss
@@ -504,6 +504,10 @@ li.table-view-cell {
   }
 }
 
+li.table-view-cell.wide {
+  padding: 11px 15px 11px 15px;
+}
+
 ul.no-style {
   list-style: none;
   padding: 0;
