--- a/src/samples/taxa/list/styles.scss
+++ b/src/samples/taxa/list/styles.scss
@@ -1,10 +1,10 @@
-@import "../../../common/styles/_variables";
+@import '../../../common/styles/_variables';
 
 #add-species {
   color: $header-color;
 }
 
-#taxa-list{
+#taxa-list {
   border-color: $color-blue-light;
 
   .media-body {
