--- a/src/samples/edit/styles.scss
+++ b/src/samples/edit/styles.scss
@@ -1,8 +1,8 @@
-@import "../../common/styles/_variables.scss";
+@import '../../common/styles/_variables.scss';
 
 //HEADING
 .heading {
-  font-size: .9em!important;
+  font-size: 0.9em !important;
   width: 33%;
   overflow: visible;
 }
@@ -32,10 +32,11 @@ ul.table-view.inputs {
   color: $button-black;
 }
 
-.descript, .heading {
-  display: inline-block!important;
+.descript,
+.heading {
+  display: inline-block !important;
   vertical-align: middle;
-  margin: 0!important;
+  margin: 0 !important;
 
   color: $button-black;
 }
@@ -47,7 +48,7 @@ ul.table-view.inputs {
 
   float: right;
   text-align: right;
-  color: $color-gray-dark ;
+  color: $color-gray-dark;
 
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -94,7 +95,6 @@ ul.table-view.inputs {
   font-family: icons;
   content: '\e80c';
 }
-
 
 $footer-height: 80px;
 
