--- a/src/samples/taxa/search/styles.scss
+++ b/src/samples/taxa/search/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../common/styles/_variables.scss";
+@import '../../../common/styles/_variables.scss';
 
 #suggestions .table-view {
   border-top: none;
@@ -19,7 +19,7 @@
 
     //left line
     &:after {
-      content: "";
+      content: '';
       background: $color-gray;
       position: absolute;
       bottom: 9px;
