--- a/src/samples/taxa/list/styles.scss
+++ b/src/samples/taxa/list/styles.scss
@@ -7,6 +7,10 @@
 #taxa-list {
   border-color: $color-blue-light;
 
+  .delete {
+    background: #5c5c5c;
+  }
+
   .media-body {
     font-size: $text-font-size;
 
@@ -16,6 +20,10 @@
 
     .scientific-name {
       font-style: italic;
+    }
+    .scientific-name-warning {
+      font-size: 12px;
+      color: $color-orange;
     }
 
     .abundance {
