Upgrade webpack, eslint and other.

--- a/src/common/styles/app.scss
+++ b/src/common/styles/app.scss
@@ -9,6 +9,7 @@
 @import './ionic-ext.scss';
 @import './app-wide.scss';
 @import './cordova.scss';
+@import './photoswipe.css';
 
 body {
   margin: 0;
