#65 Add training mode

--- a/src/common/styles/dialog.scss
+++ b/src/common/styles/dialog.scss
@@ -83,6 +83,7 @@
 .dialog-body {
   max-height: 70%;
   overflow: auto;
+  padding: 10px;
 
   div:not(.toggle .toggle-handle) {
     margin: 10px 0;
