--- a/src/samples/edit/styles.scss
+++ b/src/samples/edit/styles.scss
@@ -8,9 +8,9 @@
 }
 
 #level-indicator {
-  background-image: none;
-  text-transform: capitalize;
-  padding: 5px 0px;
+  background-image: none !important;
+  text-transform: capitalize !important;
+  padding: 5px 0px !important;
 }
 
 #sample-save-btn {
