--- a/src/Survey/common/Components/TaxonSearchPage/TaxonSearch/components/Suggestions/components/styles.scss
+++ b/src/Survey/common/Components/TaxonSearchPage/TaxonSearch/components/Suggestions/components/styles.scss
@@ -13,6 +13,7 @@
   &:nth-child(odd) {
     background-color: #fdfdfd;
     border-radius: 15px;
+    border: 1px solid #efefef;
   }
 
   &:hover {
@@ -45,15 +46,6 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-  }
-
-  div.taxon {
-    white-space: normal;
-    overflow: visible;
-    font-weight: normal;
-    margin-bottom: 3px;
-    margin-top: 3px;
-    line-height: 20px;
   }
 
   span.group {
