--- a/src/Home/Menu/Main/styles.scss
+++ b/src/Home/Menu/Main/styles.scss
@@ -1,5 +1,5 @@
 .app-menu {
-  padding-top: env(safe-area-inset-top);
+  --padding-top: env(safe-area-inset-top);
 
   .verification-warning {
     --background: #fffff2;
